@@ -1,9 +1,11 @@
 package kk.lanluyu.projecthelper.core.util;
 
-import com.alibaba.excel.EasyExcel;
+import com.alibaba.excel.EasyExcelFactory;
 import kk.lanluyu.projecthelper.core.domain.CommonException;
-import kk.lanluyu.projecthelper.model.dto.Html2PdfExportDto;
+import kk.lanluyu.projecthelper.model.dto.ExportDto;
 import lombok.extern.slf4j.Slf4j;
+import org.dromara.hutool.core.text.StrUtil;
+import org.dromara.hutool.core.util.CharsetUtil;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
@@ -18,37 +20,53 @@ import java.util.List;
 @Slf4j
 public class ExportUtils {
 
+    private ExportUtils(){}
 
-    public static void setResponse(HttpServletResponse response, String fileName) throws UnsupportedEncodingException {
+
+    public static void setPdfResponse(HttpServletResponse response, String fileName) throws UnsupportedEncodingException {
+        if(StrUtil.isEmpty(fileName)){
+            fileName = "export.pdf";
+        }
+        response.setContentType("application/pdf");
+        fileName = URLEncoder.encode(fileName, CharsetUtil.NAME_UTF_8).replace("+", "%20");
+        response.setHeader("Content-Disposition", "attachment; filename="+fileName);
+
+    }
+
+    public static void setExcelResponse(HttpServletResponse response, String fileName) throws UnsupportedEncodingException {
+        if(StrUtil.isEmpty(fileName)){
+            fileName = "export";
+        }
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
-        response.setCharacterEncoding("utf-8");
-        fileName = URLEncoder.encode(fileName, "UTF-8").replace("+", "%20");
+        response.setCharacterEncoding(CharsetUtil.NAME_UTF_8);
+        fileName = URLEncoder.encode(fileName, CharsetUtil.NAME_UTF_8).replace("+", "%20");
         response.setHeader("Content-Disposition", "attachment; filename="+fileName +".xlsx");
     }
 
     public static <T> void exportExcel(HttpServletResponse response, String fileName,
                                        Class<T> clazz, List<T> records){
         try{
-            ExportUtils.setResponse(response, fileName);
-            EasyExcel.write(response.getOutputStream(), clazz)
+            ExportUtils.setExcelResponse(response, fileName);
+            EasyExcelFactory.write(response.getOutputStream(), clazz)
                     .autoCloseStream(Boolean.FALSE).sheet().doWrite(records);
         } catch (IOException e) {
             response.reset();
             response.setContentType("application/json");
-            response.setCharacterEncoding("utf-8");
             log.error("导出失败:{}", e.getMessage(), e);
             throw new CommonException("", "导出失败");
         }
     }
 
-    public static void exportPdf(HttpServletResponse response, Html2PdfExportDto exportDto){
+    public static void exportPdf(HttpServletResponse response, ExportDto exportDto){
+        if(!exportDto.getFileName().endsWith(Html2PdfUtils.SUFFIX_PDF)){
+            exportDto.setFileName( exportDto.getFileName() + Html2PdfUtils.SUFFIX_PDF);
+        }
         try{
-            ExportUtils.setResponse(response, exportDto.getFileName());
-            Html2PdfUtils.html2Pdf(exportDto.getHtml(), response);
+            ExportUtils.setPdfResponse(response, exportDto.getFileName());
+            Html2PdfUtils.html2Pdf(exportDto.getText(), response);
         } catch (IOException e) {
             response.reset();
             response.setContentType("application/json");
-            response.setCharacterEncoding("utf-8");
             log.error("导出失败:{}", e.getMessage(), e);
             throw new CommonException("", "导出失败");
         }
